# binformer

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/binformer/: __init__.py  binance.py  chart.py  cli.py  mailer.py  performance.py  report.py  storage.py  timeline.py
tests/: conftest.py  test_cli.py  test_performance.py  test_report.py  test_storage.py
